Building ERA5 extraction methodology (debug issues...)

--- a/XGBoost_testing.ipynb
+++ b/XGBoost_testing.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "3dac9647-75a4-4fed-9338-8ce2b5b7ed12",
    "metadata": {},
    "outputs": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "609d5b62-4b7f-44cb-be0f-615774b2501b",
    "metadata": {},
    "outputs": [
@@ -86,93 +86,142 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>GRE_Score</th>\n",
-       "      <th>TOEFL_Score</th>\n",
-       "      <th>University_Rating</th>\n",
-       "      <th>SOP</th>\n",
-       "      <th>LOR</th>\n",
-       "      <th>CGPA</th>\n",
-       "      <th>Research</th>\n",
-       "      <th>Chance_of_Admit</th>\n",
+       "      <th>Unnamed:_0</th>\n",
+       "      <th>Unnamed:_0.1</th>\n",
+       "      <th>lat</th>\n",
+       "      <th>long</th>\n",
+       "      <th>State_Name</th>\n",
+       "      <th>Date_Local</th>\n",
+       "      <th>mean_no2</th>\n",
+       "      <th>year</th>\n",
+       "      <th>month</th>\n",
+       "      <th>dayofmonth</th>\n",
+       "      <th>dayofyear</th>\n",
+       "      <th>counter</th>\n",
+       "      <th>weekend</th>\n",
+       "      <th>station_id</th>\n",
+       "      <th>tropomi</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>337</td>\n",
-       "      <td>118</td>\n",
-       "      <td>4</td>\n",
-       "      <td>4.5</td>\n",
-       "      <td>4.5</td>\n",
-       "      <td>9.65</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>33.553056</td>\n",
+       "      <td>-86.815</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>2019-01-01</td>\n",
+       "      <td>4.314286</td>\n",
+       "      <td>2019</td>\n",
        "      <td>1</td>\n",
-       "      <td>0.92</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4.437013e+15</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>324</td>\n",
-       "      <td>107</td>\n",
-       "      <td>4</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>4.5</td>\n",
-       "      <td>8.87</td>\n",
        "      <td>1</td>\n",
-       "      <td>0.76</td>\n",
+       "      <td>2</td>\n",
+       "      <td>33.553056</td>\n",
+       "      <td>-86.815</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>2019-01-09</td>\n",
+       "      <td>4.957143</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>1</td>\n",
+       "      <td>9</td>\n",
+       "      <td>9</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4.437013e+15</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>316</td>\n",
-       "      <td>104</td>\n",
+       "      <td>2</td>\n",
        "      <td>3</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>3.5</td>\n",
-       "      <td>8.00</td>\n",
+       "      <td>33.553056</td>\n",
+       "      <td>-86.815</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>2019-01-10</td>\n",
+       "      <td>5.891667</td>\n",
+       "      <td>2019</td>\n",
        "      <td>1</td>\n",
-       "      <td>0.72</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4.437013e+15</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>322</td>\n",
-       "      <td>110</td>\n",
        "      <td>3</td>\n",
-       "      <td>3.5</td>\n",
-       "      <td>2.5</td>\n",
-       "      <td>8.67</td>\n",
+       "      <td>4</td>\n",
+       "      <td>33.553056</td>\n",
+       "      <td>-86.815</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>2019-01-11</td>\n",
+       "      <td>14.500000</td>\n",
+       "      <td>2019</td>\n",
        "      <td>1</td>\n",
-       "      <td>0.80</td>\n",
+       "      <td>11</td>\n",
+       "      <td>11</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4.437013e+15</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>314</td>\n",
-       "      <td>103</td>\n",
-       "      <td>2</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>8.21</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0.65</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>33.553056</td>\n",
+       "      <td>-86.815</td>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>2019-01-12</td>\n",
+       "      <td>7.254167</td>\n",
+       "      <td>2019</td>\n",
+       "      <td>1</td>\n",
+       "      <td>12</td>\n",
+       "      <td>12</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4.437013e+15</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   GRE_Score  TOEFL_Score  University_Rating  SOP  LOR   CGPA  Research  \\\n",
-       "0        337          118                  4  4.5   4.5  9.65         1   \n",
-       "1        324          107                  4  4.0   4.5  8.87         1   \n",
-       "2        316          104                  3  3.0   3.5  8.00         1   \n",
-       "3        322          110                  3  3.5   2.5  8.67         1   \n",
-       "4        314          103                  2  2.0   3.0  8.21         0   \n",
+       "   Unnamed:_0  Unnamed:_0.1        lat    long State_Name  Date_Local  \\\n",
+       "0           0             0  33.553056 -86.815    Alabama  2019-01-01   \n",
+       "1           1             2  33.553056 -86.815    Alabama  2019-01-09   \n",
+       "2           2             3  33.553056 -86.815    Alabama  2019-01-10   \n",
+       "3           3             4  33.553056 -86.815    Alabama  2019-01-11   \n",
+       "4           4             5  33.553056 -86.815    Alabama  2019-01-12   \n",
        "\n",
-       "   Chance_of_Admit  \n",
-       "0             0.92  \n",
-       "1             0.76  \n",
-       "2             0.72  \n",
-       "3             0.80  \n",
-       "4             0.65  "
+       "    mean_no2  year  month  dayofmonth  dayofyear  counter  weekend  \\\n",
+       "0   4.314286  2019      1           1          1        1        0   \n",
+       "1   4.957143  2019      1           9          9        1        0   \n",
+       "2   5.891667  2019      1          10         10        1        0   \n",
+       "3  14.500000  2019      1          11         11        1        0   \n",
+       "4   7.254167  2019      1          12         12        1        1   \n",
+       "\n",
+       "   station_id       tropomi  \n",
+       "0           1  4.437013e+15  \n",
+       "1           1  4.437013e+15  \n",
+       "2           1  4.437013e+15  \n",
+       "3           1  4.437013e+15  \n",
+       "4           1  4.437013e+15  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "cfa37ec8-b2eb-424b-849b-a192b97470bb",
    "metadata": {},
    "outputs": [],
