--- a/no2_data_pull.ipynb
+++ b/no2_data_pull.ipynb
@@ -10,18 +10,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "975a534a-7183-4942-b43a-cde0b6d6eba0",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Using pandas 1.3.3\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import xgboost as xg\n",
@@ -51,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "2e908ffb-792e-4fba-a6d8-419e00345163",
    "metadata": {},
    "outputs": [
@@ -264,7 +256,7 @@
        "[5 rows x 29 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -286,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "057ae61a-2c50-4ee7-8e1b-dd7353265523",
    "metadata": {},
    "outputs": [
@@ -328,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "73d41241-b950-4dc2-8c01-eebb430b8c77",
    "metadata": {},
    "outputs": [
@@ -526,7 +518,7 @@
        "4  Birmingham           6/12/2020  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -549,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "fddddc7c-ba1d-4c57-80b5-518abd90c4df",
    "metadata": {},
    "outputs": [
@@ -565,7 +557,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e94c21bcd0814d31912864cd824f24f2",
+       "model_id": "16e414c5ce8e45f6bceea9829883a41b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -598,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "6568295b-c164-40d8-b845-b90bb6945308",
    "metadata": {},
    "outputs": [
@@ -638,24 +630,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "e34e3b1d-45b0-47b5-b508-f4e03c6d4581",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x1100005a640>"
+       "<seaborn.axisgrid.FacetGrid at 0x1c3cfadda60>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "601cde32e80642df853af2d6f016df73",
+       "model_id": "d6e26169465140a994e704ae0abe19fe",
        "version_major": 2,
        "version_minor": 0
       },
@@ -686,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "6df9fad6-dad3-4b81-a62b-9562589ef365",
    "metadata": {},
    "outputs": [
@@ -734,7 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "43af1ee3-7c24-4019-ae27-a9b81eb835af",
    "metadata": {},
    "outputs": [
@@ -744,14 +736,14 @@
        "[Text(0.5, 0, 'Mean daily NO2 concentration (ppb)')]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2d6c2c5f594645ae8d7c1d118f14108f",
+       "model_id": "0e1dc7a27da441b39d8f11d25c9c2283",
        "version_major": 2,
        "version_minor": 0
       },
@@ -782,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "08f727a1-a6bf-4cfa-9bea-6c6fce5e2b1d",
    "metadata": {},
    "outputs": [
@@ -911,7 +903,7 @@
        "5          12         12        1        1  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -940,24 +932,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "c7df93cd-cef1-4690-9fe1-dd8a576f60e5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x11010ffcc10>"
+       "<matplotlib.legend.Legend at 0x1c3e5dabe80>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "05fbf488abc74a5989554d176b860cb1",
+       "model_id": "40b945ff51b143609adb65bb9a522f85",
        "version_major": 2,
        "version_minor": 0
       },
@@ -983,24 +975,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "ee720514-bcf6-42f4-a27d-97e95fe5c5d2",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x11000015640>"
+       "<seaborn.axisgrid.FacetGrid at 0x1c3e5d04130>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "76b40473e7b44677880e651666c5501a",
+       "model_id": "dcfe317991784f06809e8da52f14511e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1620,7 +1612,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8284f6c490714248ac3229286fab7d0b",
+       "model_id": "93d9961ae8a3409da6ccf7382b90b21a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1967,7 +1959,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
